Make Jenkins persistent template persistent

--- a/playbooks/roles/os_temps/templates/jenkins-persistent-template.yaml.j2
+++ b/playbooks/roles/os_temps/templates/jenkins-persistent-template.yaml.j2
@@ -159,9 +159,9 @@ objects:
           - name: GIT_SSL_NO_VERIFY
             value: 'true'
           - name: OVERRIDE_PV_CONFIG_WITH_IMAGE_CONFIG
-            value: 'true'
+            value: 'false'
           - name: OVERRIDE_PV_PLUGINS_WITH_IMAGE_PLUGINS
-            value: 'true'
+            value: 'false'
           - name: LOAD_SEED_JOB
             value: ${LOAD_SEED_JOB}
           - name: DSL_JOB_REPO
