--- a/playbooks/roles/os_temps/templates/jenkins-slave-template.yaml.j2
+++ b/playbooks/roles/os_temps/templates/jenkins-slave-template.yaml.j2
@@ -46,7 +46,7 @@ parameters:
 - description: Git repository with Dockerfile and slave entrypoint.
   displayName: Repository URL
   name: REPO_URL
-  value: https://github.com/CentOS-PaaS-SIG/contra-env-infra
+  value: https://github.com/goldmann/contra-env-setup
 - description: The sub-directory inside the repository.
   displayName: Context Directory
   name: CONTEXTDIR
@@ -54,4 +54,4 @@ parameters:
 - description: The git ref or tag to use for customization.
   displayName: Git Reference
   name: REPO_REF
-  value: master
+  value: persistent
